💄 Fix bullet point alignment

--- a/styles/components/_resume.scss
+++ b/styles/components/_resume.scss
@@ -103,7 +103,7 @@
     border: 0px solid black;
     background-color: black;
     border-radius: 50%;
-    margin: 6px 10px 0 -10px;
+    margin: 4px 10px 0 -10px;
   }
 
   &__category--name,
